# rtems-template

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile.conf  README.md
src/: main.c
